- Create Form to input email for forgotting password - Page Form to reset password - Fixed breaks UI

--- a/src/app/pages/auth/login/login.html
+++ b/src/app/pages/auth/login/login.html
@@ -27,13 +27,13 @@
                     <p-password [toggleMask]="true" [feedback]="false" formControlName="password"
                         placeholder="Palavra-passe" class="block mb-4" fluid />
                 </p-iconfield>
-                <a href="#" class="flex text-surface-400 mb-6 text-sm">
+                <a routerLink="/auth/forgotpassword" class="flex text-surface-400 mb-6 text-sm hover:text-primary">
                     Esqueceu-se da sua palavra-passe?
                 </a>
                 <div class="mt-6">
                     <p-button icon="pi pi-sign-in" label="Logar" [loading]="loading" type="submit"
                         (click)="login(loginForm)" pRipple [disabled]="!loginForm.valid" fluid></p-button>
-                    <span class="flex text-sm text-surface-400 mt-6">Não tem uma conta?
+                    <span class="flex text-sm text-surface-400 mt-6 hover:text-primary">Não tem uma conta?
                         <a routerLink="/auth/register" class="cursor-pointer ml-1">Registe-se aqui</a></span>
                 </div>
             </form>
