--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -7,7 +7,7 @@
              </div>
              <div class="mt-2 mb-8">
                  <p class="text-2xl font-bold">
-                     Trade License Management System
+                     Sistema de Gestão de <br> Licenças Comerciais e Indústriais
                  </p>
              </div>
          </div>
