--- a/src/app/pages/auth/activation/activation.component.html
+++ b/src/app/pages/auth/activation/activation.component.html
@@ -1,15 +1,11 @@
- <p-fluid
-     class="min-h-screen text-center w-full flex items-center md:items-start justify-start flex-col bg-auto md:bg-contain !bg-no-repeat"
-     style="padding: 10% 10% 20% 10%; background: var(--exception-pages-image); background-size: contain;">
+ <p-fluid class="min-h-screen text-center" style="padding: 50% 10% 20% 10%;">
      <div class="flex flex-col">
          <div class="flex items-center justify-center">
              <img src="/images/logo.png" style="width: 100px" alt="logo" />
          </div>
-         <div class="mt-2 mb-8">
-             <p class="text-xl">
-                 Trade License Management System
-             </p>
-         </div>
+         <p class="text-2xl font-bold mb-4">
+             Sistema de Gestão de <br> Licenças Comerciais e Indústriais
+         </p>
          @if (notification) {
          <p-message [severity]="notification.state">
              <ng-template #icon>
@@ -25,14 +21,5 @@
                  style="max-width: 200px"></button>
          </div>
 
-     </div>
-
-     <div class="flex items-center absolute" style="bottom: 75px">
-         <div class="flex items-center pr-6 mr-6 border-r border-surface-200 dark:border-surface-700">
-             <h4>
-                 Ministério de Comércio e Indústria
-             </h4>
-         </div>
-         <span class="text-sm mr-4">Copyright 2025</span>
      </div>
  </p-fluid>
