--- a/src/app/pages/application-management/application-cadastro-detail/certificate-pdf/certificate-pdf.component.html
+++ b/src/app/pages/application-management/application-cadastro-detail/certificate-pdf/certificate-pdf.component.html
@@ -28,18 +28,18 @@
             </div>
 
             <!-- Certificate Body -->
-            <div class="mt-10 text-base p-8">
+            <div class="mt-10 text-base p-8 text-justify">
                 <div class="mb-3 font-bold text-3xl">N.º <span class="font-normal">
                         {{certificadoData.pedidoInscricaoCadastro.aplicante.numero}}
                     </span></div>
                 <p class="mb-6 mt-8">
-                    Certifica-se que a Sociedade comercial <span class="font-semibold underline">
+                    Certifica-se que a Sociedade comercial <span class="font-semibold ">
                         {{certificadoData.pedidoInscricaoCadastro.nomeEmpresa}}
                     </span>,
-                    titular de Registo Comercial n.º <span class="font-semibold underline">
+                    titular de Registo Comercial n.º <span class="font-semibold ">
                         {{certificadoData.pedidoInscricaoCadastro.empresaNumeroRegistoComercial}}
                     </span> e sede em
-                    <span class="font-semibold underline">
+                    <span class="font-semibold ">
                         {{certificadoData.sede.local}},
                         {{certificadoData.sede.aldeia.nome}},
                         {{certificadoData.sede.aldeia.suco.nome}},
@@ -49,7 +49,7 @@
                     está inscrita no sistema de registo do cadastro comercial junto da Direção-Geral do Comércio do
                     Ministério
                     do Comércio e Indústria, pelo exercício da atividade de
-                    <span class="font-semibold underline">
+                    <span class="font-semibold ">
                         {{certificadoData.pedidoInscricaoCadastro.classeAtividade.descricao}}
                     </span>, nos termos do
                     Decreto-Lei
@@ -106,18 +106,18 @@
             </div>
 
             <!-- Certificate Body -->
-            <div class="mt-10 text-base p-8">
+            <div class="mt-10 text-base p-8 text-justify">
                 <div class="mb-6 font-bold text-3xl">N.º <span class="font-normal">
                         {{certificadoData.pedidoInscricaoCadastro.aplicante.numero}}
                     </span></div>
                 <p class="mb-6 mt-8">
-                    Certifica-se que a Sociedade comercial <span class="font-semibold underline">
+                    Certifica-se que a Sociedade comercial <span class="font-semibold ">
                         {{certificadoData.pedidoInscricaoCadastro.nomeEmpresa}}
                     </span>,
-                    titular de Registo Comercial n.º <span class="font-semibold underline">
+                    titular de Registo Comercial n.º <span class="font-semibold ">
                         {{certificadoData.pedidoInscricaoCadastro.empresaNumeroRegistoComercial}}
                     </span> e sede em
-                    <span class="font-semibold underline">
+                    <span class="font-semibold ">
                         {{certificadoData.sede.local}},
                         {{certificadoData.sede.aldeia.nome}},
                         {{certificadoData.sede.aldeia.suco.nome}},
@@ -127,8 +127,8 @@
                     está inscrita no sistema de registo do cadastro comercial junto da Direção-Geral do Comércio do
                     Ministério
                     do Comércio e Indústria, pelo exercício da atividade de
-                    <span class="font-semibold underline">
-                        {{certificadoData.pedidoInscricaoCadastro.classeAtividade.descricao}}
+                    <span class="font-semibold ">
+                        {{certificadoData.pedidoInscricaoCadastro.classeAtividade.descricao}} - {{certificadoData.pedidoInscricaoCadastro.classeAtividade.codigo}}
                     </span>, nos termos do Decreto-Lei
                     n.º
                     90/2023, de 27 de dezembro.
