--- a/src/app/pages/application-management/application-atividade-detail/fatura-vistoria-form/fatura-vistoria-form.component.html
+++ b/src/app/pages/application-management/application-atividade-detail/fatura-vistoria-form/fatura-vistoria-form.component.html
@@ -75,8 +75,8 @@
                              <p-button (click)="downloadFile(file)" [loading]="downloadLoading" icon="pi pi-download"
                                  [rounded]="true" [text]="true" severity="success" />
                              &nbsp;
-                             <p-button icon="pi pi-trash" [rounded]="true" [text]="true" [loading]="deleteLoading"
-                                 severity="danger" (click)="removeFile(file)" />
+                             <p-button icon="pi pi-trash" [disabled]="disabledAllForm" [rounded]="true" [text]="true"
+                                 [loading]="deleteLoading" severity="danger" (click)="removeFile(file)" />
                          </li>
                          }
                      </ul>
