--- a/src/app/pages/application-management/application-atividade-detail/pedido-atividade-form/pedido-atividade-form.component.html
+++ b/src/app/pages/application-management/application-atividade-detail/pedido-atividade-form/pedido-atividade-form.component.html
@@ -223,6 +223,12 @@
              <input formControlName="nome" id="nome" type="text" pInputText fluid />
          </div>
          <div class="mb-6 col-span-12 md:col-span-6">
+             <label for="estadoCivil" class="font-medium  mb-2 block">
+                 Estado Civil
+             </label>
+             <input formControlName="estadoCivil" id="estadoCivil" type="text" pInputText fluid />
+         </div>
+         <div class="mb-6 col-span-12 md:col-span-6">
              <label for="nacionalidade" class="font-medium  mb-2 block">
                  Nacionalidade
              </label>
@@ -329,17 +335,48 @@
                  formControlName="contratoArrendamento" optionLabel="label" optionValue="value" />
          </div>
          @if (showArrendadorForm) {
-         <div class="col-span-12 mb-6">
+         <div class="col-span-12 mb-6 bg-gray-800 p-6 rounded-lg">
              <span class="text-xl font-bold mb-3 block">
                  Arrendador
              </span>
              <div formGroupName="arrendador" class="grid grid-cols-12 gap-4">
                  <div class="mb-6 col-span-12">
+                     <label for="application" class="font-medium  mb-2 block">
+                         Tipo Arrendador
+                     </label>
+                     <p-select formControlName="tipo" inputId="application" [options]="tipoArrendadorOpts"
+                         optionLabel="name" optionValue="value" fluid filterBy="name" [showClear]="true"
+                         placeholder="Selecione o tipo arrendador">
+                     </p-select>
+                 </div>
+                 @if (requestForm.get('arrendador.tipo')?.value === 'Empresa' ||
+                 requestForm.get('arrendador.tipo')?.value === 'Individual') {
+                 <div class="mb-6 col-span-12">
                      <label for="nome" class="font-medium  mb-2 block">
-                         Nome
+                         Nome do Arrendador
                      </label>
                      <input formControlName="nome" id="nome" type="text" pInputText fluid />
                  </div>
+
+                 <div class="mb-6 col-span-12 md:col-span-6">
+                     <label for="tipoDocumento" class="font-medium  mb-2 block">
+                         Tipo de Documento de Identificação
+                     </label>
+                     <p-select fluid formControlName="tipoDocumento" id="tipoDocumento" [options]="tipoDocumentoOpts"
+                         optionLabel="name" optionValue="value" placeholder="Selecione o Tipo de Documento"
+                         [filter]=" true" filterBy="nome" [showClear]="true">
+                     </p-select>
+                 </div>
+
+                 <div class="mb-6 col-span-12 md:col-span-6">
+                     <label for="numeroDocumento" class="font-medium  mb-2 block">
+                         Nº Documento de Identificacao
+                     </label>
+                     <input formControlName="numeroDocumento" id="numeroDocumento" type="text" pInputText fluid />
+                 </div>
+                 }
+
+                 @if (requestForm.get('arrendador.tipo')?.value) {
                  <div class="col-span-12">
                      <div formGroupName="endereco" class="grid grid-cols-12">
                          <div class="mb-6 col-span-12">
@@ -386,27 +423,15 @@
                          </div>
                      </div>
                  </div>
-                 <div class="mb-6 col-span-12 md:col-span-6">
-                     <label for="tipoDocumento" class="font-medium  mb-2 block">
-                         Tipo de Documento de Identificação
-                     </label>
-                     <p-select fluid formControlName="tipoDocumento" id="tipoDocumento" [options]="tipoDocumentoOpts"
-                         optionLabel="name" optionValue="value" placeholder="Selecione o Tipo de Documento"
-                         [filter]=" true" filterBy="nome" [showClear]="true">
-                     </p-select>
-                 </div>
-                 <div class="mb-6 col-span-12 md:col-span-6">
-                     <label for="numeroDocumento" class="font-medium  mb-2 block">
-                         Nº Documento de Identificacao
-                     </label>
-                     <input formControlName="numeroDocumento" id="numeroDocumento" type="text" pInputText fluid />
-                 </div>
+
                  <div class="mb-6 col-span-12 md:col-span-6">
                      <label for="areaTotalTerreno" class="font-medium  mb-2 block">
                          Area Total do Terreno
                      </label>
                      <input formControlName="areaTotalTerreno" id="areaTotalTerreno" type="number" pInputText fluid />
                  </div>
+
+
                  <div class="mb-6 col-span-12 md:col-span-6">
                      <label for="areaTotalConstrucao" class="font-medium  mb-2 block">
                          Area Total da Construção
@@ -438,6 +463,7 @@
                              [maxFractionDigits]="2" />
                      </p-inputgroup>
                  </div>
+                 }
              </div>
 
          </div>
@@ -519,7 +545,7 @@
              </ul>
              <p-fileupload name="files" method="post" (onUpload)="onUploadDocs($event)" [maxFileSize]="maxFileSize"
                  [multiple]="true" accept="application/pdf" mode="advanced" [url]="uploadURLDocs()" [fileLimit]=""
-                 [disabled]="disabledForm">
+                 [disabled]="disabledAllForm">
                  <ng-template #empty>
                      @if (uploadedDocs.length === 0) {
                      Arraste e largue os ficheiros aqui para carregar.
@@ -541,7 +567,7 @@
                              &nbsp;
                              <p-button icon="pi pi-trash" [rounded]="true" [text]="true"
                                  [loading]="loadingRemoveButtons.has(item.nome)" severity="danger"
-                                 [disabled]="disabledForm" (click)="removeDoc(item)" />
+                                 [disabled]="!requestForm.valid || disabledAllForm" (click)="removeDoc(item)" />
                          </li>
                          }
                      </ul>
