--- a/src/app/pages/auth/login/login.html
+++ b/src/app/pages/auth/login/login.html
@@ -33,8 +33,8 @@
                 <div class="mt-6">
                     <p-button icon="pi pi-sign-in" label="Logar" [loading]="loading" type="submit"
                         (click)="login(loginForm)" pRipple [disabled]="!loginForm.valid" fluid></p-button>
-                    <span class="flex text-sm text-surface-400 mt-6 hover:text-primary">Não tem uma conta?
-                        <a routerLink="/auth/register" class="cursor-pointer ml-1">Registe-se aqui</a></span>
+                    <span class="flex text-sm text-surface-400 mt-6">Não tem uma conta?
+                        <a routerLink="/auth/register" class="hover:text-primary cursor-pointer ml-1">Registe-se aqui</a></span>
                 </div>
             </form>
 
