--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -413,6 +413,13 @@
                                          pInputText fluid />
                                  </div>
                                  <div class="mb-6 col-span-12 md:col-span-6">
+                                     <label for="estadoCivil" class="font-medium  mb-2 block">
+                                         Estado Civil
+                                     </label>
+                                     <input formControlName="estadoCivil" id="estadoCivil" type="text" pInputText
+                                         fluid />
+                                 </div>
+                                 <div class="mb-6 col-span-12 md:col-span-6">
                                      <label for="email" class="font-medium  mb-2 block">
                                          Email
                                      </label>
@@ -965,13 +972,13 @@
                                          </div>
                                      </section>
                                  </main>
-                                  <div class="mt-6 mb-6 text-left flex justify-between items-center">
-                                         <p-button label="Back" severity="secondary" icon="pi pi-arrow-left"
-                                             iconPos="left" (onClick)="activateCallback(2)" />
-                                         <p-button icon="pi pi-save" (click)="submit(empresaForm)" [loading]="loading"
-                                             [disabled]="!empresaForm.valid" pButton pRipple label="Confirmar e Guardar"
-                                             class="w-auto"></p-button>
-                                     </div>
+                                 <div class="mt-6 mb-6 text-left flex justify-between items-center">
+                                     <p-button label="Back" severity="secondary" icon="pi pi-arrow-left" iconPos="left"
+                                         (onClick)="activateCallback(2)" />
+                                     <p-button icon="pi pi-save" (click)="submit(empresaForm)" [loading]="loading"
+                                         [disabled]="!empresaForm.valid" pButton pRipple label="Confirmar e Guardar"
+                                         class="w-auto"></p-button>
+                                 </div>
                              </div>
 
                          </div>
@@ -1031,8 +1038,8 @@
                  <p-button icon="pi pi-send" (click)="submit(empresaForm)" [loading]="loading"
                      [disabled]="empresaForm.valid" pButton label="Reenviar email">
                  </p-button>
-                 <p-button icon="pi pi-sign-in" pButton label="Logar" styleClass="max-width:200px" routerLink="/auth/login"
-                     [rounded]="true" [outlined]="true">
+                 <p-button icon="pi pi-sign-in" pButton label="Logar" styleClass="max-width:200px"
+                     routerLink="/auth/login" [rounded]="true" [outlined]="true">
                  </p-button>
              </div>
 
